# intento_de_juego_de_lucha_2D

./: .gitignore  CMakeLists.txt  main.cpp
include/core/: Game.h  InputManager.h
include/entities/: Player.h
include/menus/: MainMenu.h  MenuState.h
include/states/: MainMenu.h
src/: Main.cpp
src/core/: Game.cpp  InputManager.cpp
src/entities/: Player.cpp
src/menus/: MainMenu.cpp
src/states/: MainMenu.cpp
